# lightblue

./: .dockerignore  .gitignore  CallChasen.hs  CallChasenTest.hs  CallJuman.hs  CallJumanTest.hs  ChangeLog.md  ChartParser.hs  CombinatoryCategorialGrammar.hs  DTStoProlog.hs  DependentTypes.hs  DependentTypesTest.hs  Dockerfile.express  Interface.hs  JapaneseLexicon.hs  JumanLexicon.hs  LICENSE  LexicalTemplates.hs  MyLexicon.hs  NatTest.hs  ParseCorpus.hs  ParseJSeM.hs  ParseText.hs  README.md  TeXmodule.hs  TreebankBuilder.hs  XMLmodule.hs  checkEntailment.hs  checkJumanDic  contributors.txt  coqlib.glob  coqlib.vo  disjtest  docker-entrypoint.sh  lightblue  lightblue.cabal  lightblue.hs  lightblueMain.hs  makefile  myprove.sh  (+7 more)
Classifier/: DiscourseRelation.hs
DTS/: DTS2Coq.hs  DTSwithVarName.hs  DTT.hs  DependentTypes.hs  DependentTypesWVN.hs  Prover.hs  SimpleText.hs  UDTT.hs  UDTTwithName.hs
Interface/: HTML.hs  JSeM.hs  MathML.hs  OpenNLP.hs  StanfordNLP.hs  TeX.hs  Text.hs  XML.hs
JSeM/: accuracy.sh  create_conf_matrix.sh  eval_jsem_all.sh  evaluate_jsem.sh  extract_jsem_problems.py
Logic/: DependentTypes.hs
Parser/: CCG.hs  ChartParser.hs  CombinatoryCategorialGrammar.hs  TeXmodule.hs  XMLmodule.hs
Prolog/: alphaConversion.pl  betaConversion.pl  comsemPredicates.pl  correspondence.tex  drt2latex.pl  elimSigma.pl  presupposition.pl  prolog2coq.pl  prolog2latex.pl
app/: collectProofTrees.hs  collectTypeCheckTrees.hs  debug.hs  (+1 more)
juman-7.01/autodic/: Auto.dic  Makefile.am  Makefile.in
juman-7.01/dic/: Assert.dic  AuxV.dic  Demonstrative.dic  JUMAN.connect.c  JUMAN.grammar  JUMAN.kankei  JUMAN.katuyou  Makefile.am  Makefile.in  Noun.koyuu.dic  Noun.suusi.dic  Postp.dic  Prefix.dic  Rengo.dic  Special.dic  Suffix.dic
(+2998 files in other folders)
